--- a/nippon/udforsk.html
+++ b/nippon/udforsk.html
@@ -14,7 +14,7 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="brand-title">
-            <a href="index.html"><img src="img/nippon-logo-2.webp" alt="Nippon Logo 2"></a>
+            <a href="index.html"><img src="img/illustrationer/nippon-logo-2.webp" alt="Nippon Logo 2"></a>
         </div>
         
         <div class="navbar-links">
@@ -50,9 +50,9 @@
 
         <p id="nobu-citat">“I always strive to be the best.”</p>
 
-        <img id="nobu-underskrift" src="img/nobu-matshuisa-underskrift.png" alt="nobu matshuisa underskrift">
+        <img id="nobu-underskrift" src="img/illustrationer/nobu-matshuisa-underskrift.png" alt="nobu matshuisa underskrift">
 
-        <img id="nobu-billede" src="img/nobu-matshuisa-billede.png" alt="nobu matshuisa billede">
+        <img id="nobu-billede" src="img/fotos/nobu-matshuisa-billede.png" alt="nobu matshuisa billede">
 
         <!-- Yoshiko Hattori -->
         <h2 id="yoshiko-navn">Yoshiko Hattori 服部良子</h2>
@@ -65,9 +65,9 @@
 
             <p id="yoshiko-citat">"Embrace the diversity of flavors, techniques, and cultures in the world of cuisine.”</p>
 
-            <img id="yoshiko-underskrift" src="img/yoshiko-hattori-underskrift.png" alt="yoshiko hattori underskrift">
+            <img id="yoshiko-underskrift" src="img/illustrationer/yoshiko-hattori-underskrift.png" alt="hattori underskrift" >
 
-            <img id="yoshiko-billede" src="img/yoshiko-hattori-billede.png" alt="yoshiko hattori billede">
+            <img id="yoshiko-billede" src="img/fotos/yoshiko-hattori-billede.png" alt="yoshiko hattori billede">
         </section>
     </main>
 
