--- a/nippon/index.html
+++ b/nippon/index.html
@@ -15,7 +15,7 @@
     <header class="hero">
 
         <!-- Logo -->
-            <a id="hero-logo" href="index.html"><img id="hero-logo" src="img/nippon-logo.webp" alt="Nippon Logo Main"></a>
+            <a id="hero-logo" href="index.html"><img id="hero-logo" src="img/illustrationer/nippon-logo.webp" alt="Nippon Logo Main"></a>
 
             <!-- Navbar ikoner -->
             <div class="hero-icons">
@@ -25,8 +25,8 @@
             </div>
             
             <!-- Bølger -->
-            <img id="hero-waves-1" src="img/nipponboelger-crop.png" alt="Nippon Bølger">
-            <img id="hero-waves-2" src="img/nipponboelger-crop.png" alt="Nippon Bølger">
+            <img id="hero-waves-1" src="img/illustrationer/boelger.svg" alt="Nippon Bølger">
+            <img id="hero-waves-2" src="img/illustrationer/boelger.svg" alt="Nippon Bølger">
 
             <!-- Menupunkter -->
             <a id="hero-menupunkt-1" href="maeltidskasser.html">MÅLTIDSKASSER</a>
@@ -34,7 +34,7 @@
             <a id="hero-menupunkt-3" href="#"><span class="material-symbols-outlined">shopping_cart</span></a>
 
             <!-- Billede i baggrunden -->
-            <img id="hero-billede" src="img/hero-billede.png" alt="Nippon Velkomst">
+            <img id="hero-billede" src="img/fotos/hero-billede.png" alt="Nippon Velkomst">
             
             <!-- Velkomstskrift der skifter baseret på tidspunkt på dag -->
             <h1>GODMORGEN - おはよう</h1>
