--- a/nippon/index.html
+++ b/nippon/index.html
@@ -25,8 +25,8 @@
             </div>
             
             <!-- Bølger -->
-            <img id="hero-waves-1" src="img/illustrationer/boelger.svg" alt="Nippon Bølger">
-            <img id="hero-waves-2" src="img/illustrationer/boelger.svg" alt="Nippon Bølger">
+            <img id="hero-waves-1" src="img/illustrationer/boelger.png" alt="Nippon Bølger">
+            
 
             <!-- Menupunkter -->
             <a id="hero-menupunkt-1" href="maeltidskasser.html">MÅLTIDSKASSER</a>
