--- a/nippon/maeltidskasser.html
+++ b/nippon/maeltidskasser.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sulphur+Point:wght@300;400;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/410264dd86.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- Navbar -->
@@ -44,10 +45,10 @@
 
     <!-- Popup til Oplevelsespakken -->
     <dialog id="oplevelsespakke-modal">
+        <i id="oplevelsespakke-kryds" class="fa-solid fa-xmark"></i>
         <h2>Oplevelseskassen</h2>
         <a href="#">Om Kassen</a>
         <p>Friske Håndlavede Dumplings, med en fyldig ramenskål.</p>
-        <button id="oplevelsespakke-kryds">Close</button>
     </dialog>
 
     <!-- Resten af pakkerne -->
