--- a/nippon/maeltidskasser.html
+++ b/nippon/maeltidskasser.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Måltidskasser</title>
-    <link rel="stylesheet" href="css/maeltidskasser.css">
+  
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sulphur+Point:wght@300;400;700&display=swap" rel="stylesheet">
+    <!-- Link til font awesome iconer -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <script src="https://kit.fontawesome.com/410264dd86.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/maeltidskasser.css">
 </head>
 <body>
     <!-- Navbar -->
@@ -73,6 +76,40 @@
         <button class="btn">Læs Mere</button>
     </section>
 </main>
+
+<footer class="footer">
+    <section class="stor-container">
+        <ul class="lille-container">
+            <li><h4>Kontaktoplysninger</h4></li>
+            <li>Søvangen 3, 8000 Aarhus C</li>
+            <li><a href="#">support@nippon.dk</a></li>
+            <li><a href="#">+45 12 13 14 15</a></li>
+        </ul>
+
+        <ul class="lille-container">
+            <li><h4>Nyhedsbrev</h4></li>
+            <li>Tilmeld dig her:</li>
+            <li>
+                <div class="nyhedsbrev">
+                    <input type="email" id="email" placeholder="Indtast din email" required>
+                    <button type="submit">Tilmeld</button>
+                </div>
+            </li>
+        </ul>
+        
+
+        <ul class="lille-container">
+            <li><h4>Sociale medier</h4></li>
+            <li>Join os her:</li>
+            <li class="socials">
+                <a href="#"><i class="fab fa-youtube"></i></a>
+                <a href="#"><i class="fab fa-facebook"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+            </li>
+        </ul>
+    </section>
+
+</footer>
 
     <script src="js/maeltidskasser.js"></script>
 </body>
