--- a/nippon/404.html
+++ b/nippon/404.html
@@ -19,7 +19,7 @@
     <h2>Ups! Nudlerne vælter rundt i køkkenet.</h2>
     <img src="img/illustrationer/nuddelskael.webp" alt="nuddelskael">
     <h2>Prøv at gå tilbage til en anden side </h2>
-    <p>Gå tilbage her</p>
+    <a href="index.html">Gå tilbage her</a>
 </main>
     
 </body>
