--- a/nippon/index.html
+++ b/nippon/index.html
@@ -45,8 +45,8 @@
             <p>Nippon forhandler autentiske <br> asiatiske måltidskasser</p>
        
             <!-- Pil der scroller ned til main content -->
-            <a id="hero-pil" href="#navbar" class="scroll-down-link"><span class="material-symbols-outlined">keyboard_arrow_down</span></a>
-    </header>
+            <a id="hero-pil" href="#navbar"><i class="fa-solid fa-chevron-down"></i></i></a>
+        </header>
 
 
     <!-- Navbar -->
