--- a/nippon/maeltidskasser.html
+++ b/nippon/maeltidskasser.html
@@ -41,8 +41,9 @@
 
     <section id="oplevelsespakke">
         <img src="img/illustrationer/oplevelse-kasse.png" alt="oplevelsespakken">
-        <h2>Oplevelsespakken</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore, animi?</p>
+        <h2>Oplevelseskassen</h2>
+        <p>Vores oplevelseskasse tilbyder mere end bare mad; den giver jer en unik mulighed for at skabe minder og uforglemmelige oplevelser sammen. <br>
+        Så leder du efter mere end bare et måltid, så er oplevelsespakken lige noget for jer. </p>
         <button id="oplevelsespakke-laes-mere" class="btn">Læs Mere</button>
     </section>
 
@@ -57,22 +58,25 @@
     <!-- Resten af pakkerne -->
     <section id="hverdagspakke">
         <img src="img/illustrationer/hverdag-kasse.png" alt="hverdagspakken">
-        <h2>Hverdagspakken</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, ratione.</p>
+        <h2>Hverdagskassen</h2>
+        <p>Vores hverdagskasse tilbyder den perfekte løsning til travle hverdage, hvor tiden ofte er lidt knap, men ønsket om velsmagende måltider stadig er vigtigt! <br>
+        Så prøv vores hverdagskasse, som du selv kan skræddersy, så den passer perfekt til dig.</p>
         <button class="btn">Læs Mere</button>
     </section>
 
     <section id="redskabspakke">
         <img src="img/illustrationer/redskab-kasse.png" alt="redskabspakken">
-        <h2>Redskabspakken</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, dolorem?</p>
+        <h2>Redskabskassen</h2>
+        <p>Vores redskabskasse er til dig, der er helt vild med asiatisk mad, men som ikke nødvendigvis har redskaberne til at lave de lækre retter. <br>
+        Ved at købe vores redskabskasse, har du nu mulighed for at lave alt lige fra lækre dumplings til sushi!</p>
         <button class="btn">Læs Mere</button>
     </section>
 
     <section id="ingredienspakke">
         <img src="img/illustrationer/ingrediens-kasse.png" alt="ingredienspakken">
-        <h2>Ingredienspakken</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi, iusto?</p>
+        <h2>Ingredienskassen</h2>
+        <p>Ingredienskassen er den ideelle løsning til jer, der elsker at lave asiatisk mad derhjemme, men som mangler de rigtige ingredienser til at give den helt perfekte smag. <br>
+        Ved at vælge ingredienskassen får du alle de nødvendige råvarer leveret lige til din dør! </p>
         <button class="btn">Læs Mere</button>
     </section>
 </main>
