--- a/nippon/index.html
+++ b/nippon/index.html
@@ -22,7 +22,7 @@
 
             <!-- Navbar ikoner -->
             <div class="hero-icons">
-                <a href="#"><span class="material-symbols-outlined">account_circle</span></a>
+                <a href="404.html"><span class="material-symbols-outlined">account_circle</span></a>
                 <a href="#"><span class="material-symbols-outlined">favorite</span></a>
                 <a href="#"><span class="material-symbols-outlined">search</span></a> 
             </div>
