--- a/nippon/index.html
+++ b/nippon/index.html
@@ -45,7 +45,7 @@
             <p>Nippon forhandler autentiske <br> asiatiske måltidskasser</p>
        
             <!-- Pil der scroller ned til main content -->
-            <a id="hero-pil" href="#navbar"><i class="fa-solid fa-chevron-down"></i></i></a>
+            <a id="hero-pil" href="#navbar"><i class="fa-solid fa-chevron-down" class="shake-vertical"></i></i></a>
         </header>
 
 
