--- a/nippon/404.html
+++ b/nippon/404.html
@@ -40,7 +40,7 @@
         </header>
 
     <!-- main -->
-<main class="fejlside">
+<main>
 
     <h1>404</h1>
     <h2>Ups! Nudlerne vælter rundt i køkkenet.</h2>
