update af billeder

--- a/nippon/favoritter.html
+++ b/nippon/favoritter.html
@@ -16,7 +16,10 @@
 
 <body>
     <main>
+
+        <div class="overskrift">
         <a href="#"><span class="material-symbols-outlined">favorite</span></a> <h1>Dine favoritter</h1><a href="#"><span class="material-symbols-outlined">favorite</span></a>
+        </div>
 
         <section class="favoritter">
         <h2>Du har endnu ikke tilføjet noget til dine favoritter. Her er nogle forslag til dig:</h2>
@@ -46,7 +49,7 @@
 
             <span class="spisepinde">
                 <div class="section">
-                    <img src="img/illustrationer/" alt="spisepinde" class="spisepinde">
+                    <img src="img/illustrationer/spisepinde.png" alt="spisepinde" class="spisepinde">
                     <h3>Spisepinde</h3>
                     <p>2 stk</p>
                     <p>55,00 kr.</p>
@@ -58,7 +61,7 @@
 
             <span class="dehydreret-tang">
                 <div class="section">
-                    <img src="img/illustrationer/" alt="dehydreret-tang" class="dehydreret-tang">
+                    <img src="img/illustrationer/tang.png" alt="dehydreret-tang" class="dehydreret-tang">
                     <h3>Dehydreret tang</h3>
                     <p>4-6 personer</p>
                     <p>80,00 kr.</p>
