--- a/nippon/404.html
+++ b/nippon/404.html
@@ -17,12 +17,11 @@
 <body>
      <!-- Navbar -->
      <header class="navbar">
-
         <!-- Logo -->
-            <a id="hero-logo" href="index.html"><img id="hero-logo" src="img/illustrationer/nippon-logo.webp" alt="Nippon Logo Main"></a>
+            <a id="navbar-logo" href="index.html"><img id="hero-logo" src="img/illustrationer/nippon-logo.webp" alt="Nippon Logo Main"></a>
 
             <!-- Navbar ikoner -->
-            <div class="hero-icons">
+            <div class="navbar-icons">
                 <a href="404.html"><span class="material-symbols-outlined">account_circle</span></a>
                 <a href="#"><span class="material-symbols-outlined">favorite</span></a>
                 <a id="hero-menupunkt-3" href="#"><span class="material-symbols-outlined">shopping_cart</span></a>
@@ -30,12 +29,11 @@
             </div>
             
             <!-- Bølger -->
-            <img id="hero-waves-1" src="img/illustrationer/boelger.png" alt="Nippon Bølger">
+            <img id="navbar-waves" src="img/illustrationer/boelger.png" alt="Nippon Bølger">
             
-
             <!-- Menupunkter -->
-            <a id="hero-menupunkt-1" href="maeltidskasser.html">MÅLTIDSKASSER</a>
-            <a id="hero-menupunkt-2" href="udforsk.html">UDFORSK NIPPON</a>
+            <a id="navbar-menupunkt-1" href="maeltidskasser.html">MÅLTIDSKASSER</a>
+            <a id="navbar-menupunkt-2" href="udforsk.html">UDFORSK NIPPON</a>
 
         </header>
 
