--- a/nippon/404.html
+++ b/nippon/404.html
@@ -17,8 +17,9 @@
 <body>
      <!-- Navbar -->
      <header class="navbar">
+        
         <!-- Logo -->
-            <a id="navbar-logo" href="index.html"><img id="hero-logo" src="img/illustrationer/nippon-logo.webp" alt="Nippon Logo Main"></a>
+            <a id="navbar-logo" href="index.html"><img id="navbar-logo" src="img/illustrationer/nippon-logo.webp" alt="Nippon Logo Main"></a>
 
             <!-- Navbar ikoner -->
             <div class="navbar-icons">
@@ -31,6 +32,7 @@
             <!-- Bølger -->
             <img id="navbar-waves" src="img/illustrationer/boelger.png" alt="Nippon Bølger">
             
+
             <!-- Menupunkter -->
             <a id="navbar-menupunkt-1" href="maeltidskasser.html">MÅLTIDSKASSER</a>
             <a id="navbar-menupunkt-2" href="udforsk.html">UDFORSK NIPPON</a>
