--- a/nippon/index.html
+++ b/nippon/index.html
@@ -100,10 +100,10 @@
                 <li><h4>Nyhedsbrev</h4></li>
                 <li>Tilmeld dig her:</li>
                 <li>
-                    <div class="nyhedsbrev">
+                    <section class="nyhedsbrev">
                         <input type="email" id="email" placeholder="Indtast din email" required>
                         <button type="submit">Tilmeld</button>
-                    </div>
+                    </section>
                 </li>
             </ul>
             
