update til favoritter

--- a/nippon/favoritter.html
+++ b/nippon/favoritter.html
@@ -30,7 +30,7 @@
                 <h3>1 X Oplevelseskasse</h3>
                 <p>2 personer</p>
                 <p>549,00 kr.</p>
-                <a href="#"> Tilføj <a href="#"><span class="material-symbols-outlined">favorite</span></a> </a>
+                <a href="#" class="tilføj"> Tilføj <a href="#"><span class="material-symbols-outlined">favorite</span></a> </a>
             </div>
             </span>
 
@@ -41,7 +41,7 @@
                     <img src="img/illustrationer/ingrediens-kasse.png" alt="ingrediens-kasse" class="ingrediens-kasse">
                     <h3>1 X ingredienskasse</h3>
                     <p>249,00 kr.</p>
-                    <a href="#"> Tilføj <a href="#"><span class="material-symbols-outlined">favorite</span></a> </a>
+                    <a href="#" class="tilføj"> Tilføj <a href="#"><span class="material-symbols-outlined">favorite</span></a> </a>
                 </div>
                 </span>
 
@@ -53,7 +53,7 @@
                     <h3>Spisepinde</h3>
                     <p>2 stk</p>
                     <p>55,00 kr.</p>
-                    <a href="#"> Tilføj <a href="#"><span class="material-symbols-outlined">favorite</span></a> </a>
+                    <a href="#" class="tilføj"> Tilføj <a href="#"><span class="material-symbols-outlined">favorite</span></a> </a>
                 </div>
                 </span>
 
@@ -65,7 +65,7 @@
                     <h3>Dehydreret tang</h3>
                     <p>4-6 personer</p>
                     <p>80,00 kr.</p>
-                    <a href="#"> Tilføj <a href="#"><span class="material-symbols-outlined">favorite</span></a> </a>
+                    <a href="#" class="tilføj"> Tilføj <a href="#"><span class="material-symbols-outlined">favorite</span></a> </a>
                 </div>
                 </span>
 
