--- a/nippon/favoritter.html
+++ b/nippon/favoritter.html
@@ -72,6 +72,40 @@
         </section>
 
     </main>
+
+     <!-- Footer -->
+     <footer class="footer">
+        <section class="stor-container">
+            <ul class="lille-container">
+                <li><h4>Kontaktoplysninger</h4></li>
+                <li>Søvangen 3, 8000 Aarhus C</li>
+                <li><a href="#">support@nippon.dk</a></li>
+                <li><a href="#">+45 12 13 14 15</a></li>
+            </ul>
+
+            <ul class="lille-container">
+                <li><h4>Nyhedsbrev</h4></li>
+                <li>Tilmeld dig her:</li>
+                <li>
+                    <section class="nyhedsbrev">
+                        <input type="email" id="email" placeholder="Indtast din email" required>
+                        <button type="submit">Tilmeld</button>
+                    </section>
+                </li>
+            </ul>
+            
+
+            <ul class="lille-container">
+                <li><h4>Sociale medier</h4></li>
+                <li>Join os her:</li>
+                <li class="socials">
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                </li>
+            </ul>
+        </section>
+    </footer>
 </body>
 
 </html>
