--- a/nippon/udforsk.html
+++ b/nippon/udforsk.html
@@ -74,6 +74,7 @@
         </section>
     </main>
 
+<!-- footer -->
     <footer class="footer">
         <section class="stor-container">
             <ul class="lille-container">
