--- a/nippon/udforsk-kredsloeb.html
+++ b/nippon/udforsk-kredsloeb.html
@@ -35,7 +35,7 @@
 
         <!-- Menupunkter -->
         <a id="navbar-menupunkt-1" href="maeltidskasser.html">MÅLTIDSKASSER</a>
-        <a id="navbar-menupunkt-2" href="udforsk.html">UDFORSK NIPPON</a>
+        <a id="navbar-menupunkt-2" href="udforsk-kredsloeb.html">UDFORSK NIPPON</a>
 
     </header>
     
