--- a/nippon/kurv.html
+++ b/nippon/kurv.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="din kurv, betaling, levering, kontaktoplysninger, din ordre, ordre">
+    <meta name="description" content="Denne side viser din kurv på hjemmesiden Nippon. Her skal du udfylde kontaktoplysninger, betalingsoplysninger m.m, så vi kan sende din ordre til dig"> 
     <title>Din kurv</title>
  
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
