--- a/nippon/maeltidskasser.html
+++ b/nippon/maeltidskasser.html
@@ -83,6 +83,9 @@
 
  <!-- footer -->
 <footer class="footer">
+    <picture>
+        <img src="img/illustrationer/boelger.png" alt="Illutration over bølger">
+    </picture>
     <section class="stor-container">
         <ul class="lille-container">
             <li><h4>Kontaktoplysninger</h4></li>
