--- a/nippon/favoritter.html
+++ b/nippon/favoritter.html
@@ -75,6 +75,9 @@
 
      <!-- Footer -->
      <footer class="footer">
+        <picture>
+            <img src="img/illustrationer/boelger.png" alt="Illutration over bølger">
+        </picture>
         <section class="stor-container">
             <ul class="lille-container">
                 <li><h4>Kontaktoplysninger</h4></li>
