--- a/nippon/maeltidskasser.html
+++ b/nippon/maeltidskasser.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="måltidskasser, oplevelseskasser, hverdagskasser, ingredienskasser, redskabskasser, oplysninger">
+    <meta name="description" content="Denne side viser vores måltidskasser. Her kan du vælge at høre mere om alle vores klasser, som du kan købe."> 
     <title>Måltidskasser</title>
   
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
