Updateret med meta tags m.m.

--- a/nippon/favoritter.html
+++ b/nippon/favoritter.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mine favoritter</title>
+    <meta name="keywords" content="favoritter, inspiration, forslag, måltidskasser, tilføj">
+    <meta name="description" content="Ved Nippon vil vi gerne give dig inspiration til fremtidige måltider, derfor kan du tilføje vores måltidskasser eller andre varer til dine favoritter, så du nemmere kan danne dig et overblik."> 
+    <title>Dine favoritter</title>
  
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,52 +24,60 @@
         </div>
 
         <section class="favoritter">
-        <h2>Du har endnu ikke tilføjet noget til dine favoritter. Her er nogle forslag til dig:</h2>
+        <h2>Du har endnu ikke tilføjet noget til dine favoritter. <br> Her er nogle forslag til dig:</h2>
 
-            <span class="oplevelse-kasse">
-            <div class="section">
+            <section class="oplevelse-kasse">
                 <img src="img/illustrationer/oplevelse-kasse.png" alt="oplevelses-kasse" class="oplevelse-kasse">
-                <h3>1 X Oplevelseskasse</h3>
-                <p>2 personer</p>
-                <p>549,00 kr.</p>
-                <a href="#" class="tilføj"> Tilføj <a href="#"><span class="material-symbols-outlined">favorite</span></a> </a>
-            </div>
-            </span>
-
-            <hr>
-
-            <span class="ingredienskasse">
                 <div class="section">
-                    <img src="img/illustrationer/ingrediens-kasse.png" alt="ingrediens-kasse" class="ingrediens-kasse">
-                    <h3>1 X ingredienskasse</h3>
-                    <p>249,00 kr.</p>
-                    <a href="#" class="tilføj"> Tilføj <a href="#"><span class="material-symbols-outlined">favorite</span></a> </a>
+                    <div class="container1">
+                        <h3>1 X Oplevelseskasse</h3>
+                        <a href="#" class="tilføj"> Tilføj <a href="#"><span id="tilføj" class="material-symbols-outlined">favorite</span></a> </a>
+                     </div>
+                    <p>2 personer</p>
+                    <p>549,00 kr.</p>
                 </div>
-                </span>
+            </section>
 
             <hr>
 
-            <span class="spisepinde">
-                <div class="section">
-                    <img src="img/illustrationer/spisepinde.png" alt="spisepinde" class="spisepinde">
-                    <h3>Spisepinde</h3>
+            <section class="ingredienskasse">
+                <img src="img/illustrationer/ingrediens-kasse.png" alt="ingrediens-kasse" class="ingrediens-kasse">
+                <div class="section1">
+                    <div class="container2">
+                        <h3>1 X Ingredienskasse</h3>
+                        <a href="#" class="tilføj1"> Tilføj <a href="#"><span id="tilføj1" class="material-symbols-outlined">favorite</span></a> </a>
+                    </div>
+                    <p>249,00 kr.</p>
+                </div>
+            </section>
+
+            <hr>
+
+            <section class="spisepinde">
+                <img src="img/illustrationer/spisepinde.png" alt="spisepinde" class="spisepinde">
+                <div class="section2">
+                    <div class="container3">
+                        <h3>Spisepinde</h3>
+                        <a href="#" class="tilføj2"> Tilføj <a href="#"><span id="tilføj2" class="material-symbols-outlined">favorite</span></a> </a>
+                    </div>
                     <p>2 stk</p>
                     <p>55,00 kr.</p>
-                    <a href="#" class="tilføj"> Tilføj <a href="#"><span class="material-symbols-outlined">favorite</span></a> </a>
                 </div>
-                </span>
+            </section>
 
             <hr>
 
-            <span class="dehydreret-tang">
-                <div class="section">
-                    <img src="img/illustrationer/tang.png" alt="dehydreret-tang" class="dehydreret-tang">
-                    <h3>Dehydreret tang</h3>
+            <section class="dehydreret-tang">
+                <img src="img/illustrationer/tang.png" alt="dehydreret-tang" class="dehydreret-tang">
+                <div class="section3">
+                    <div class="container4">
+                        <h3>Dehydreret tang</h3>
+                        <a href="#" class="tilføj3"> Tilføj <a href="#"><span id="tilføj3" class="material-symbols-outlined">favorite</span></a> </a>
+                    </div>
                     <p>4-6 personer</p>
                     <p>80,00 kr.</p>
-                    <a href="#" class="tilføj"> Tilføj <a href="#"><span class="material-symbols-outlined">favorite</span></a> </a>
                 </div>
-                </span>
+            </section>
 
         </section>
 
