Updateret meta tags på alle html siderne

--- a/nippon/index.html
+++ b/nippon/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forside</title>
+    <meta name="keywords" content="nippon, asiatisk mad, aftensmad, ramen, måltidskasser, oplevelseskasser, hverdagskasser, ingredienskasser, redskabskasser, oplysninger, oplevelser, japanske retter">
+    <meta name="description" content="Velkommen til Nippon! Vi laver autentisk asiatiske opskrifter og oplevelser, der bliver leveret lige foran din dør. Udforsk vores køkke og lækre opskrifter her på siden. Vi er en måltidskasse til din næste oplevelse i køkkenet."> 
+    <title>Nippon forside</title>
  
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
