--- a/nippon/kontakt.html
+++ b/nippon/kontakt.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="måltidskasser, kontakt, nippon, kontaktoplysninger, faq, spørgsmål, rådgivning">
+    <meta name="description" content="Du kan her kontakte os, hvis du mangler nogle oplysninger, eller har nogle ubesvarede spørgsmål! Join os på de sociale medier, så kan du følge med fra sofaen også!"> 
     <title>Kontakt</title>
  
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
