--- a/nippon/udforsk-kredsloeb.html
+++ b/nippon/udforsk-kredsloeb.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forside</title>
+    <meta name="keywords" content="måltidskasser, kredsløb, asiatisk mad, danske landmænd, nippon">
+    <meta name="description" content="Du kan se mere om Nippons historie her. Vi går meget op i autentiske madoplevelser, hvorved du kan se mere om, hvor vores råvarer kommer fra! Læs mere her på siden."> 
+    <title>Nippons kredsløb</title>
  
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
