--- a/nippon/udforsk-kokke.html
+++ b/nippon/udforsk-kokke.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="udforsk, kokke, asiatisk mad, japansk mad, udforsk nippon, oplysninger">
+    <meta name="description" content="Her kan du udforske Nippon. Du kan læse mere om vores kokke og hvor vores lækre råvarer kommer fra."> 
     <title>Udforsk Nippon</title>
     
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
