--- a/nippon/404.html
+++ b/nippon/404.html
@@ -24,7 +24,7 @@
             <!-- Navbar ikoner -->
             <div class="navbar-icons">
                 <a href="404.html"><span class="material-symbols-outlined">account_circle</span></a>
-                <a href="#"><span class="material-symbols-outlined">favorite</span></a>
+                <a href="favoritter.html"><span class="material-symbols-outlined">favorite</span></a>
                 <a href="#"><span class="material-symbols-outlined">search</span></a> 
             </div>
             
