tilføjet nav til flere undersider
nav bar

--- a/nippon/index.html
+++ b/nippon/index.html
@@ -20,7 +20,7 @@
     <header class="hero">
 
         <!-- Logo -->
-            <a id="hero-logo" href="index.html"><img id="hero-logo" src="img/illustrationer/nippon-logo.webp" alt="Nippon Logo Main"></a>
+            <a id="hero-logo" href="index.html"><img id="hero-logo" src="img/illustrationer/logo.navbar.png" alt="Nippon Logo Main"></a>
 
             <!-- Navbar ikoner -->
             <div class="hero-icons">
