--- a/nippon/udforsk-kredsloeb.html
+++ b/nippon/udforsk-kredsloeb.html
@@ -62,9 +62,9 @@
 
     <h1>Vil du have indsigt i Nippons kredsløb?</h1>
 
-    <p>Vi ønsker at støtte hjernerne bag vores opskrifter og det lokalsamfund de lever i. Vi sørger derfor altid for at vores krydderier og lokale ingredienser bliver betalt.</p>
+    <h2>Vi ønsker at støtte hjernerne bag vores opskrifter og det lokalsamfund de lever i. Vi sørger derfor altid for at vores krydderier og lokale ingredienser bliver betalt.</h2>
 
-    <img src="" alt="Nippons kredsløb">
+    <img class="infog" src="img/illustrationer/infographic.png" alt="Nippons kredsløb">
 
 </article>
 
