--- a/nippon/index.html
+++ b/nippon/index.html
@@ -83,7 +83,12 @@
     <button class="btn">Udforsk Nippon</button>
     
     <section class="ramen">
-
+        <p>Har du testet vores ramen? I denne måneds oplevelseskasse følger vores opskrift på en lækker ramen med</p>
+        <picture class="ramen-billeder">
+            <img src="img/illustrationer/ramen-aeg.png" alt="Illustration over ramen" class="ramen1">
+            <img src="img/illustrationer/ramen-svampe.png" alt="Illustration over ramen">
+            <img src="img/illustrationer/ramen-pakchoi.png" alt="Illustration over ramen">
+        </picture>
     </section>
 
     </main>
