jeg tester lige noget med nav bar på forsiden i forsideny

--- a/nippon/index.html
+++ b/nippon/index.html
@@ -32,11 +32,12 @@
             <!-- Bølger -->
             <img id="hero-waves-1" src="img/illustrationer/boelger.png" alt="Nippon Bølger">
             
-
-            <!-- Menupunkter -->
-            <a id="hero-menupunkt-1" href="maeltidskasser.html">MÅLTIDSKASSER</a>
-            <a id="hero-menupunkt-2" href="udforsk.html">UDFORSK NIPPON</a>
-            <a id="hero-menupunkt-3" href="#"><span class="material-symbols-outlined">shopping_cart</span></a>
+            <div class="menupunkter-baggrund"> 
+                <!-- Menupunkter -->
+                <a id="hero-menupunkt-1" href="maeltidskasser.html">MÅLTIDSKASSER</a>
+                <a id="hero-menupunkt-2" href="udforsk.html">UDFORSK NIPPON</a>
+                <a id="hero-menupunkt-3" href="#"><span class="material-symbols-outlined">shopping_cart</span></a>
+             </div>
 
             <!-- Billede i baggrunden -->
             <img id="hero-billede" src="img/fotos/hero-billede.png" alt="Nippon Velkomst">
@@ -51,26 +52,29 @@
         </header>
 
 
-    <!-- Navbar -->
-    <nav id="navbar" class="navbar">
-<div class="brand-title">
-    <a href="index.html"><img src="img/nippon-logo-2.webp" alt="Nippon Logo 2"></a>
-</div>
 
-<div class="navbar-links">
-    <ul>
-        <li><a href="maeltidskasser.html">MÅLTIDSKASSER</a></li>
-        <li><a href="udforsk.html">UDFORSK NIPPON</a></li>
-    </ul>
-</div>
 
-<div class="navbar-icons">
-    <a href="#"><span class="material-symbols-outlined">account_circle</span></a>
-    <a href="#"><span class="material-symbols-outlined">favorite</span></a>
-    <a href="#"><span class="material-symbols-outlined">shopping_cart</span></a>
-    <a href="#"><span class="material-symbols-outlined">search</span></a>
-</div>
-    </nav>
+<!-- Nav bar 2 (efter scroll) -->
+
+<nav id="navbar" class="navbar">
+        <div class="brand-title">
+            <a href="index.html"><img src="img/nippon-logo-2.webp" alt="Nippon Logo 2"></a>
+        </div>
+
+        <div class="navbar-links">
+            <ul>
+                <li><a href="maeltidskasser.html">MÅLTIDSKASSER</a></li>
+                <li><a href="udforsk.html">UDFORSK NIPPON</a></li>
+            </ul>
+        </div>
+
+        <div class="navbar-icons">
+            <a href="#"><span class="material-symbols-outlined">account_circle</span></a>
+            <a href="#"><span class="material-symbols-outlined">favorite</span></a>
+            <a href="#"><span class="material-symbols-outlined">shopping_cart</span></a>
+            <a href="#"><span class="material-symbols-outlined">search</span></a>
+        </div>
+</nav>
 
     <!-- Main section -->
     <main id="main-content">
