måltidskasser pop up

--- a/nippon/maeltidskasser.html
+++ b/nippon/maeltidskasser.html
@@ -76,11 +76,43 @@
     <i id="oplevelsespakke-kryds" class="fa-solid fa-xmark"></i>
         <h2>Oplevelseskassen</h2>
         <ul>
-            <li><a href="#">Om Kassen</a></li>
-            <li><a href="#">Indhold</a></li>
-            <li><a href="#">Kokken bag</a></li>
-            <li><a href="#">FAQ</a></li>
+            <li><a class="popup-link" id="om-kassen-link" href="#om-kassen">Om Kassen</a></li>
+            <li><a class="popup-link" id="indhold-link" href="#indhold">Indhold</a></li>
+            <li><a class="popup-link" id="kokken-bag-link" href="#kokken-bag">Kokken bag</a></li>
+            <li><a class="popup-link" id="faq-link" href="#faq">FAQ</a></li>
         </ul>
+
+        <section id="om-kassen">
+            <img src="img/fotos/om-kassen.png" alt="om kassen">
+
+            <div id="om-kassen-tekst">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim quisquam dicta id at iste, officia accusamus cupiditate beatae, officiis omnis quam distinctio in et nisi ut fugiat aspernatur culpa aut quidem. Nisi, dignissimos atque optio magni quia omnis officiis mollitia commodi deserunt velit quam distinctio! Pariatur sapiente corrupti suscipit placeat!</p>
+            </div>
+        </section>
+
+        <section id="indhold">
+            <img src="img/fotos/indhold.png" alt="indhold">
+
+            <aside id="indhold-aside">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim quisquam dicta id at iste, officia accusamus cupiditate beatae, officiis omnis quam distinctio in et nisi ut fugiat aspernatur culpa aut quidem. Nisi, dignissimos atque optio magni quia omnis officiis mollitia commodi deserunt velit quam distinctio! Pariatur sapiente corrupti suscipit placeat!</p>
+            </aside>
+        </section>
+
+        <section id="kokken-bag">
+            <img src="img/fotos/kokken-bag.png" alt="kokken bag">
+
+            <aside id="kokken-bag">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim quisquam dicta id at iste, officia accusamus cupiditate beatae, officiis omnis quam distinctio in et nisi ut fugiat aspernatur culpa aut quidem. Nisi, dignissimos atque optio magni quia omnis officiis mollitia commodi deserunt velit quam distinctio! Pariatur sapiente corrupti suscipit placeat!</p>
+            </aside>
+        </section>
+
+        <section id="faq">
+            <img src="img/fotos/faq.png" alt="faq">
+
+            <aside id="faq-aside">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim quisquam dicta id at iste, officia accusamus cupiditate beatae, officiis omnis quam distinctio in et nisi ut fugiat aspernatur culpa aut quidem. Nisi, dignissimos atque optio magni quia omnis officiis mollitia commodi deserunt velit quam distinctio! Pariatur sapiente corrupti suscipit placeat!</p>
+            </aside>
+        </section>
     </dialog>
 
     <!-- Resten af pakkerne -->
