slettede min test side

--- a/nippon/index.html
+++ b/nippon/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
     <!-- Hero Section -->
     <header class="hero">
 
@@ -58,7 +59,7 @@
 
 <nav id="navbar" class="navbar">
         <div class="brand-title">
-            <a href="index.html"><img src="img/nippon-logo-2.webp" alt="Nippon Logo 2"></a>
+            <a href="index.html"><img src="img/illustrationer/nippon-logo-2.webp" alt="Nippon Logo 2"></a>
         </div>
 
         <div class="navbar-links">
