--- a/nippon/index.html
+++ b/nippon/index.html
@@ -43,7 +43,7 @@
             <img id="hero-billede" src="img/fotos/hero-billede.png" alt="Nippon Velkomst">
             
             <!-- Velkomstskrift der skifter baseret på tidspunkt på dag -->
-            <h1>GODMORGEN - おはよう</h1>
+            <h1 id="greetingMessage"></h1>
 
             <p>Nippon forhandler autentiske <br> asiatiske måltidskasser</p>
        
