update på forside

--- a/nippon/index.html
+++ b/nippon/index.html
@@ -78,15 +78,30 @@
 </nav>
 
     <!-- Main section -->
+
+    <!-- Se pakken section -->
     <main id="main-content">
     <section class="oplevelsespakke-teaser">
 
+    <img src="img/fotos/sepakken.png" alt="sepakken" class="sepakken">
+   
+    <!-- text på billede -->
+    <div>
+    <h2>Prøv vores</h2>
+    <h1>OPLEVELSESPAKKE</h1>
+    <h2>med en du holder af...</h2>
+    <p>Pakken indeholder opskrift, alle nødvendige råvarer, autentiske ingredienser og redskaber</p>
+    <a href="#"><button class="seindhold">Se indhold</button></a>
+    </div>
+
     </section>
 
+    <!-- midter text -->
     <p class="middle-text">Visionen for Nippon er at <br> skabe en autentisk asiatisk madoplevelse</p>
     
     <button class="btn">Udforsk Nippon</button>
     
+    <!-- ramen section -->
     <section class="ramen">
         <p>Har du testet vores ramen? I denne måneds oplevelseskasse følger vores opskrift på en lækker ramen med</p>
         <picture class="ramen-billeder">
@@ -94,6 +109,24 @@
             <img src="img/illustrationer/ramen-svampe.png" alt="Illustration over ramen">
             <img src="img/illustrationer/ramen-pakchoi.png" alt="Illustration over ramen">
         </picture>
+    </section>
+
+    <!-- some section -->
+    <section class="some">
+     <h1>Del dine oplevelser med os</h1>
+     <h2>Som mange andre allerede har gjort</h2>
+     <p>Vi vil altid gerne se resultatet når du laver måltidskasser med dine venner, alene, med kæresten - eller hvem end de heldige er! Vi findes på de fleste platforme, så husk at tag os @Nippon. <br> Vi glæder os til at følge med hos jer! </p>
+
+     <ul class="someiconer">
+        <li>Følg os:</li>
+        <li class="iconer">
+            <a href="#"><i class="fab fa-youtube"></i></a>
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+        </li>
+    </ul>
+
+    <img src="img/fotos/some.png" alt="some" class="collage">
     </section>
 
     </main>
