--- a/nippon/index.html
+++ b/nippon/index.html
@@ -113,9 +113,11 @@
 
     <!-- some section -->
     <section class="some">
+    <div class="text-container">
      <h1>Del dine oplevelser med os</h1>
      <h2>Som mange andre allerede har gjort</h2>
-     <p>Vi vil altid gerne se resultatet når du laver måltidskasser med dine venner, alene, med kæresten - eller hvem end de heldige er! Vi findes på de fleste platforme, så husk at tag os @Nippon. <br> Vi glæder os til at følge med hos jer! </p>
+     <p>Vi vil altid gerne se resultatet når du laver måltidskasser med dine venner, alene, med kæresten - eller hvem end de heldige er! Vi findes på de fleste platforme, så husk at tag os @Nippon. <br> <br> Vi glæder os til at følge med hos jer! </p>
+
 
      <ul class="someiconer">
         <li>Følg os:</li>
@@ -125,8 +127,9 @@
             <a href="#"><i class="fab fa-instagram"></i></a>
         </li>
     </ul>
-
+</div>
     <img src="img/fotos/some.png" alt="some" class="collage">
+    
     </section>
 
     </main>
