update med links

--- a/nippon/404.html
+++ b/nippon/404.html
@@ -25,7 +25,7 @@
             <div class="navbar-icons">
                 <a href="404.html"><span class="material-symbols-outlined">account_circle</span></a>
                 <a href="favoritter.html"><span class="material-symbols-outlined">favorite</span></a>
-                <a href="#"><span class="material-symbols-outlined">search</span></a> 
+                <a href="404.html"><span class="material-symbols-outlined">search</span></a> 
             </div>
             
             <!-- Bølger -->
@@ -43,7 +43,7 @@
                     <li><a href="udforsk-kredsloeb.html">Vores kredsløb</a></li>
                 </ul>
 
-            <a id="navbar-link3" href="favoritter.html"><span class="material-symbols-outlined">shopping_cart</span></a>
+            <a id="navbar-link3" href="kurv.html"><span class="material-symbols-outlined">shopping_cart</span></a>
 
         </header>
 
@@ -73,7 +73,7 @@
         <ul class="lille-container">
             <li><h4>Kontaktoplysninger</h4></li>
             <li>Søvangen 3, 8000 Aarhus C</li>
-            <li><a href="#">support@nippon.dk</a></li>
+            <li><a href="https://mail.google.com/">support@nippon.dk</a></li>
             <li><a href="#">+45 12 13 14 15</a></li>
         </ul>
 
@@ -93,9 +93,9 @@
             <li><h4>Sociale medier</h4></li>
             <li>Join os her:</li>
             <li class="socials">
-                <a href="#"><i class="fab fa-youtube"></i></a>
-                <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
+                <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
             </li>
         </ul>
     </section>
