--- a/nippon/kontakt.html
+++ b/nippon/kontakt.html
@@ -29,7 +29,7 @@
         <div class="navbar-icons">
             <a href="404.html"><span class="material-symbols-outlined">account_circle</span></a>
             <a href="favoritter.html"><span class="material-symbols-outlined">favorite</span></a>
-            <a href="#"><span class="material-symbols-outlined">search</span></a> 
+            <a href="404.html"><span class="material-symbols-outlined">search</span></a> 
         </div>
         
         <!-- Bølger -->
@@ -47,7 +47,7 @@
                 <li><a href="udforsk-kredsloeb.html">Vores kredsløb</a></li>
             </ul>
 
-        <a id="navbar-link3" href="favoritter.html"><span class="material-symbols-outlined">shopping_cart</span></a>
+        <a id="navbar-link3" href="kurv.html"><span class="material-symbols-outlined">shopping_cart</span></a>
 
     </header>
 
@@ -62,8 +62,8 @@
 <h1>Kontakt os</h1>
 <h2>Vi vil elske at høre fra jer! Så endelig kontakt os over alle vores platforme</h2>
 <p>Søvangen 3, 8000 Aarhus C </p>
-<a href="#">support@nippon.dk</a> <br>
-<a href="#">+45 12 13 14 15</a> 
+<a href="https://mail.google.com/">support@nippon.dk</a> <br>
+<a href="+45 12 13 14 15">+45 12 13 14 15</a> 
 </section>
 
 <section class="insta-container">
@@ -76,7 +76,7 @@
         <img src="img/illustrationer/faq.png" alt="faq" class="faq-img">
         <div class="bannertext">
             <h3>Se vores FAQ, hvis du har ubesvaret spørgsmål</h3>
-            <a href="#">FAQ - Nippon</a>
+            <a href="404.html">FAQ - Nippon</a>
         </div>
     </div>
 <hr>
@@ -84,7 +84,7 @@
         <img src="img/illustrationer/mail.png" alt="mail" class="mail-img">
         <div class="bannertext">
             <h3>Eller skriv til os på mail, hvor vi sidder klar!</h3> 
-            <a href="#">support@nippon.dk</a>
+            <a href="https://mail.google.com/">support@nippon.dk</a>
         </div>
     </div>
 </section>
@@ -102,7 +102,7 @@
             <ul class="lille-container">
                 <li><h4>Kontaktoplysninger</h4></li>
                 <li>Søvangen 3, 8000 Aarhus C</li>
-                <li><a href="#">support@nippon.dk</a></li>
+                <li><a href="https://mail.google.com/">support@nippon.dk</a></li>
                 <li><a href="#">+45 12 13 14 15</a></li>
             </ul>
 
@@ -122,9 +122,9 @@
                 <li><h4>Sociale medier</h4></li>
                 <li>Join os her:</li>
                 <li class="socials">
-                    <a href="#"><i class="fab fa-youtube"></i></a>
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
+                    <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
                 </li>
             </ul>
         </section>
