--- a/nippon/kurv.html
+++ b/nippon/kurv.html
@@ -27,7 +27,7 @@
             <div class="navbar-icons">
                 <a href="404.html"><span class="material-symbols-outlined">account_circle</span></a>
                 <a href="favoritter.html"><span class="material-symbols-outlined">favorite</span></a>
-                <a href="#"><span class="material-symbols-outlined">search</span></a> 
+                <a href="404.html"><span class="material-symbols-outlined">search</span></a> 
             </div>
             
             <!-- Bølger -->
@@ -63,7 +63,7 @@
             <section class="container1">
                 <div class="container-7">
                     <h2>Har du en konto? </h2> 
-                    <a href="#">Log in</a>
+                    <a href="404.html">Log in</a>
                 </div>
                 <h3>Kontaktoplysninger</h3>
                 <section class="container3">
@@ -135,7 +135,7 @@
             <ul class="lille-container">
                 <li><h4>Kontaktoplysninger</h4></li>
                 <li>Søvangen 3, 8000 Aarhus C</li>
-                <li><a href="#">support@nippon.dk</a></li>
+                <li><a href="https://mail.google.com/">support@nippon.dk</a></li>
                 <li><a href="#">+45 12 13 14 15</a></li>
             </ul>
 
@@ -155,9 +155,9 @@
                 <li><h4>Sociale medier</h4></li>
                 <li>Join os her:</li>
                 <li class="socials">
-                    <a href="#"><i class="fab fa-youtube"></i></a>
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
+                    <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
                 </li>
             </ul>
         </section>
