pop up DEN ER FUCKING DONE RAHHHHHH

--- a/nippon/maeltidskasser.html
+++ b/nippon/maeltidskasser.html
@@ -82,6 +82,10 @@
             <li><a class="popup-link" id="faq-link" href="#faq">FAQ</a></li>
         </ul>
 
+        <p id="bestil-tekst">Pris for 2 personer, fra <span id="pris">549 kr.</span> <br>Gratis fragt til alle medlemmer</p>
+
+        <button id="bestil-knap" onclick="redirectToKurv()">Bestil</button>
+
         <section id="om-kassen" style="background-image: url('img/fotos/om-kassen.png');">
             <aside id="om-kassen-aside">
                 <h3>Friske Håndlavede Dumplings, med <br> en fyldig ramenskål.</h3>
@@ -100,11 +104,11 @@
 
                 <p id="om-kassen-bestil">Bestil din oplevelseskasse i dag og dyk ned i <br> en verden af gastronimisk glæde, lige fra dit eget hjem. Velbekomme!</p>
 
-                <img src="img/illustrationer/nut-free.png" alt="nut free">
+                <img src="img/illustrationer/nutfree.png" alt="nut free">
 
-                <img src="img/illustrationer/milk-free.png" alt="milk free">
+                <img src="img/illustrationer/milkfree.png" alt="milk free">
 
-                <img src="img/illustrationer/gluten-free.png" alt="gluten free">
+                <img src="img/illustrationer/glutenfree.png" alt="gluten free">
             </aside>
         </section>
 
